# Quoridor

./: .gitignore  CMakeLists.txt  main.cpp
Quoridor/: CMakeLists.txt
Quoridor/src/: game.h
src/: Types.cpp  Types.h  game.cpp  game.h  movement_rules.cpp
windows/: gamewindow.cpp  gamewindow.h  gamewindow.ui
windows/game/: gamewindow.cpp  gamewindow.h  gamewindow.ui
windows/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
